DD-42145 rebase from main into team/dlrm7 (#199)