@@ -179,6 +179,7 @@ import uk.gov.justice.core.courts.ProsecutionCasesToRemove;
 import uk.gov.justice.core.courts.Prosecutor;
 import uk.gov.justice.core.courts.ReapplyMiReportingRestrictions;
 import uk.gov.justice.core.courts.ReceiveRepresentationOrderForDefendant;
+import uk.gov.justice.core.courts.ReplayedDefendantsAddedToCourtProceedings;
 import uk.gov.justice.core.courts.ReportingRestriction;
 import uk.gov.justice.core.courts.UpdatedOrganisation;
 import uk.gov.justice.cpp.progression.events.DefendantDefenceAssociationLocked;
@@ -300,7 +301,7 @@ import org.slf4j.LoggerFactory;
 @SuppressWarnings({"squid:S3776", "squid:MethodCyclomaticComplexity", "squid:S1948", "squid:S3457", "squid:S1192", "squid:CallToDeprecatedMethod", "squid:S1188", "squid:S2384", "pmd:NullAssignment", "squid:S134", "squid:S1312", "squid:S1612", "pmd:NullAssignment"})
 public class CaseAggregate implements Aggregate {
 
-    private static final long serialVersionUID = -2092381865833271664L;
+    private static final long serialVersionUID = -2092381865833271661L;
 
     private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd");
     private static final DateTimeFormatter ZONE_DATETIME_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss.SSS'Z'");
@@ -938,7 +939,7 @@ public class CaseAggregate implements Aggregate {
     }
 
     private void addToDefendantCaseOffences(final UUID defendantId, final List<Offence> concludedPlusOngoingOffences) {
-        if (nonNull(concludedPlusOngoingOffences)) {
+        if (nonNull(concludedPlusOngoingOffences)){
             this.defendantCaseOffences.put(defendantId, getOffencesWithDefaultOrderIndex(concludedPlusOngoingOffences));
         }
     }
@@ -1005,7 +1006,6 @@ public class CaseAggregate implements Aggregate {
 
     /**
      * Update MI case status using BDF
-     *
      * @param prosecutionCaseId
      * @param caseStatus
      * @param notes
@@ -1048,8 +1048,7 @@ public class CaseAggregate implements Aggregate {
             defendantList.stream().forEach(x -> DefendantHelper.getUpdatedDefendantWithMasterDefendantId(prosecutionCase, x, transformToExactMatchedDefendants(exactMatchedDefendants.get(x.getId()))));
         }
 
-
-        if (nonNull(prosecutionCase.getIsCivil()) && prosecutionCase.getIsCivil() && isNotEmpty(effectiveCivilFeesForTheCase)) {
+        if(nonNull(prosecutionCase.getIsCivil()) && prosecutionCase.getIsCivil() && isNotEmpty(effectiveCivilFeesForTheCase)) {
             return updateProsecutionCaseWithCivilFeesIdAndFeeTypeOnly(prosecutionCase, effectiveCivilFeesForTheCase);
         } else {
             return apply(Stream.of(ProsecutionCaseCreated.prosecutionCaseCreated()
@@ -1155,6 +1154,17 @@ public class CaseAggregate implements Aggregate {
         );
     }
 
+    public Stream<Object> replayDefendantsAddedToCourtProceedings(final List<Defendant> defendants, final List<ListHearingRequest> listHearingRequests, final Integer interval) {
+
+        final ReplayedDefendantsAddedToCourtProceedings replayedDefendantsAddedToCourtProceedings = ReplayedDefendantsAddedToCourtProceedings.replayedDefendantsAddedToCourtProceedings()
+                    .withDefendants(defendants)
+                    .withListHearingRequests(listHearingRequests)
+                    .withInterval(interval)
+                    .build();
+
+        return apply(Stream.of(replayedDefendantsAddedToCourtProceedings));
+    }
+
     /**
      * Stores defendants and list hearing requests (to be added to hearing) in aggregate if the
      * prosecution case has not been created in hearing context - event
@@ -1250,7 +1260,7 @@ public class CaseAggregate implements Aggregate {
 
         final List<UUID> filteredApplicationHearingIds = allHearingIdsForCase.stream()
                 .filter(id -> !hearingIds.contains(id))
-                .collect(Collectors.toList());
+                .toList();
         if (isNotEmpty(filteredApplicationHearingIds)) {
             if (LOGGER.isInfoEnabled()) {
                 LOGGER.info("filteredApplicationHearingIds for which event raised : {}", filteredApplicationHearingIds);
@@ -1406,7 +1416,7 @@ public class CaseAggregate implements Aggregate {
                     LOGGER.info("CaseAggregateInfo: updateDefendantCustodialInformationDetails case {} defendant {} condition failed [defendantsMap.containsKey()]", caseId, defendantId);
                 }
 
-                if (nonNull(defendantProceedingConcluded.get(caseId)) && defendantProceedingConcluded.get(caseId).get(defendantId)) {
+                if (nonNull(defendantProceedingConcluded.get(caseId)) && TRUE.equals(defendantProceedingConcluded.get(caseId).get(defendantId))) {
                     LOGGER.info("CaseAggregateInfo: updateDefendantCustodialInformationDetails defendant {} : defendantProceedingConcluded.get(caseId).get(defendantId) is true", defendantId);
                 }
                 continue;
@@ -1471,7 +1481,7 @@ public class CaseAggregate implements Aggregate {
 
             final List<UUID> filteredApplicationHearingIds = allHearingIdsForCase.stream()
                     .filter(id -> !hearingIds.contains(id))
-                    .collect(Collectors.toList());
+                    .toList();
             if (isNotEmpty(filteredApplicationHearingIds)) {
                 if (LOGGER.isInfoEnabled()) {
                     LOGGER.info("filteredApplicationHearingIds for which event raised : {}", filteredApplicationHearingIds);
@@ -1541,72 +1551,73 @@ public class CaseAggregate implements Aggregate {
 
         LOGGER.debug(" ProsecutionCase is being updated ");
         final Stream.Builder<Object> streamBuilder = Stream.builder();
-        final List<uk.gov.justice.core.courts.Defendant> defendantListForProceedingsConcludedEventTrigger = new ArrayList<>();
-        final List<uk.gov.justice.core.courts.Defendant> updatedDefendantsForProceedingsConcludedEvent = new ArrayList<>();
+        if (!"EJECTED".equalsIgnoreCase(caseStatus)) {
+            final List<uk.gov.justice.core.courts.Defendant> defendantListForProceedingsConcludedEventTrigger = new ArrayList<>();
+            final List<uk.gov.justice.core.courts.Defendant> updatedDefendantsForProceedingsConcludedEvent = new ArrayList<>();
 
-        updatedDefendantsWithProceedingConcludedState(prosecutionCase, offenceProceedingConcluded, updatedDefendantsForProceedingsConcludedEvent, defendantJudicialResults);
+            updatedDefendantsWithProceedingConcludedState(prosecutionCase, offenceProceedingConcluded, updatedDefendantsForProceedingsConcludedEvent, defendantJudicialResults);
 
-        updatedDefendantsForProceedingsConcludedEvent.forEach(defendant -> {
-            final uk.gov.justice.core.courts.Defendant updatedDefendant =
-                    uk.gov.justice.core.courts.Defendant.defendant().withValuesFrom(defendant).withProceedingsConcluded(isConcludedAtDefendantLevel(defendant)).build();
-            if (isProceedingConcludedEventTriggered(defendant, offenceProceedingConcluded, defendantProceedingConcluded.get(prosecutionCase.getId()))) {
-                defendantListForProceedingsConcludedEventTrigger.add(updatedDefendant);
-            }
-        });
-
-        if (isNotEmpty(defendantListForProceedingsConcludedEventTrigger)) {
-            final UUID resultedHearingId = hearingId != null ? hearingId : latestHearingId;
-            streamBuilder.add(laaDefendantProceedingConcludedChanged()
-                    .withDefendants(defendantListForProceedingsConcludedEventTrigger)
-                    .withHearingId(resultedHearingId)
-                    .withProsecutionCaseId(prosecutionCase.getId())
-                    .build());
-        }
-
-        final String updatedCaseStatus = getUpdatedCaseStatus(prosecutionCase);
-        final ProsecutionCase updatedProsecutionCase = toUpdatedProsecutionCase(prosecutionCase,
-                updateDefendantWithProceedingsConcludedStatusAndOriginalListingNumbers(prosecutionCase),
-                updatedCaseStatus);
-
-        streamBuilder.add(HearingResultedCaseUpdated.hearingResultedCaseUpdated()
-                .withProsecutionCase(updatedProsecutionCase)
-                .build());
-
-        //Identify list of defendants whose proceedingsConcluded is true and raise private event progression.event.defendant-record-sheet-requested
-        if (nonNull(updatedProsecutionCase) && nonNull(updatedProsecutionCase.getDefendants())) {
-            updatedProsecutionCase.getDefendants().forEach(defendant -> {
-                if (Boolean.TRUE.equals(defendant.getProceedingsConcluded())) {
-                    streamBuilder.add(DefendantTrialRecordSheetRequested.defendantTrialRecordSheetRequested()
-                            .withCaseId(prosecutionCase.getId())
-                            .withDefendantId(defendant.getId())
-                            .build());
+            updatedDefendantsForProceedingsConcludedEvent.forEach(defendant -> {
+                final uk.gov.justice.core.courts.Defendant updatedDefendant =
+                        uk.gov.justice.core.courts.Defendant.defendant().withValuesFrom(defendant).withProceedingsConcluded(isConcludedAtDefendantLevel(defendant)).build();
+                if (isProceedingConcludedEventTriggered(defendant, offenceProceedingConcluded, defendantProceedingConcluded.get(prosecutionCase.getId()))) {
+                    defendantListForProceedingsConcludedEventTrigger.add(updatedDefendant);
                 }
             });
+
+            if (isNotEmpty(defendantListForProceedingsConcludedEventTrigger)) {
+                final UUID resultedHearingId = hearingId != null ? hearingId : latestHearingId;
+                streamBuilder.add(laaDefendantProceedingConcludedChanged()
+                        .withDefendants(defendantListForProceedingsConcludedEventTrigger)
+                        .withHearingId(resultedHearingId)
+                        .withProsecutionCaseId(prosecutionCase.getId())
+                        .build());
+            }
+
+            final String updatedCaseStatus = getUpdatedCaseStatus(prosecutionCase);
+            final ProsecutionCase updatedProsecutionCase = toUpdatedProsecutionCase(prosecutionCase,
+                    updateDefendantWithProceedingsConcludedStatusAndOriginalListingNumbers(prosecutionCase),
+                    updatedCaseStatus);
+
+            streamBuilder.add(HearingResultedCaseUpdated.hearingResultedCaseUpdated()
+                    .withProsecutionCase(updatedProsecutionCase)
+                    .build());
+
+            //Identify list of defendants whose proceedingsConcluded is true and raise private event progression.event.defendant-record-sheet-requested
+            if (nonNull(updatedProsecutionCase) && nonNull(updatedProsecutionCase.getDefendants())) {
+                updatedProsecutionCase.getDefendants().forEach(defendant -> {
+                    if (Boolean.TRUE.equals(defendant.getProceedingsConcluded())) {
+                        streamBuilder.add(DefendantTrialRecordSheetRequested.defendantTrialRecordSheetRequested()
+                                .withCaseId(prosecutionCase.getId())
+                                .withDefendantId(defendant.getId())
+                                .build());
+                    }
+                });
+            }
+
+            if (JurisdictionType.CROWN == jurisdictionType && !TRUE.equals(isBoxHearing)) {
+                final HearingInfo hearingInfo = new HearingInfo(hearingId, hearingType, jurisdictionType.name(),
+                        courtCentre.getId(), courtCentre.getName(), courtCentre.getRoomId(), courtCentre.getRoomName());
+                final List<uk.gov.justice.core.courts.Offence> defendantsOffences = getAllDefendantsOffences(prosecutionCase.getDefendants());
+                final List<DefendantJudicialResult> defendantJudicialResultsOfDefendants = getDefendantJudicialResultsOfDefendantsAssociatedToTheCase(prosecutionCase.getDefendants(), defendantJudicialResults);
+                final DartsRetentionPolicyHelper dartsRetentionPolicyHelper = new DartsRetentionPolicyHelper(hearingInfo, defendantsOffences, defendantJudicialResultsOfDefendants, remitResultIds);
+
+                final RetentionPolicy retentionPolicy = dartsRetentionPolicyHelper.getRetentionPolicy();
+                LOGGER.info("Case Retention policy={} calculated for CaseURN={} with caseStatus={}", retentionPolicy, getCaseURN(prosecutionCase.getProsecutionCaseIdentifier()), updatedCaseStatus);
+
+                final RetentionPolicy caseRetentionPolicyByHearing = getCaseRetentionPolicyByHearing(hearingId, retentionPolicy);
+                hearingCaseRetentionMap.put(hearingId, caseRetentionPolicyByHearing);
+
+                streamBuilder.add(getCaseRetentionPolicyRecorded(getCaseURN(prosecutionCase.getProsecutionCaseIdentifier()), courtCentre, hearingId, hearingType, jurisdictionType, caseRetentionPolicyByHearing));
+            }
+
+            if (INACTIVE.getDescription().equalsIgnoreCase(updatedCaseStatus) && !hearingCaseRetentionMap.isEmpty()) {
+                final RetentionPolicy retentionPolicy = getRetentionPolicyByPriority(hearingCaseRetentionMap.values());
+                streamBuilder.add(getCaseRetentionLengthCalculatedEvent(getCaseURN(prosecutionCase.getProsecutionCaseIdentifier()),
+                        updatedCaseStatus, retentionPolicy));
+                streamBuilder.add(getHearingEventLogsDocumentCreated(prosecutionCase.getId()).build());
+            }
         }
-
-        if (JurisdictionType.CROWN == jurisdictionType && !TRUE.equals(isBoxHearing)) {
-            final HearingInfo hearingInfo = new HearingInfo(hearingId, hearingType, jurisdictionType.name(),
-                    courtCentre.getId(), courtCentre.getName(), courtCentre.getRoomId(), courtCentre.getRoomName());
-            final List<uk.gov.justice.core.courts.Offence> defendantsOffences = getAllDefendantsOffences(prosecutionCase.getDefendants());
-            final List<DefendantJudicialResult> defendantJudicialResultsOfDefendants = getDefendantJudicialResultsOfDefendantsAssociatedToTheCase(prosecutionCase.getDefendants(), defendantJudicialResults);
-            final DartsRetentionPolicyHelper dartsRetentionPolicyHelper = new DartsRetentionPolicyHelper(hearingInfo, defendantsOffences, defendantJudicialResultsOfDefendants, remitResultIds);
-
-            final RetentionPolicy retentionPolicy = dartsRetentionPolicyHelper.getRetentionPolicy();
-            LOGGER.info("Case Retention policy={} calculated for CaseURN={} with caseStatus={}", retentionPolicy, getCaseURN(prosecutionCase.getProsecutionCaseIdentifier()), updatedCaseStatus);
-
-            final RetentionPolicy caseRetentionPolicyByHearing = getCaseRetentionPolicyByHearing(hearingId, retentionPolicy);
-            hearingCaseRetentionMap.put(hearingId, caseRetentionPolicyByHearing);
-
-            streamBuilder.add(getCaseRetentionPolicyRecorded(getCaseURN(prosecutionCase.getProsecutionCaseIdentifier()), courtCentre, hearingId, hearingType, jurisdictionType, caseRetentionPolicyByHearing));
-        }
-
-        if (INACTIVE.getDescription().equalsIgnoreCase(updatedCaseStatus) && !hearingCaseRetentionMap.isEmpty()) {
-            final RetentionPolicy retentionPolicy = getRetentionPolicyByPriority(hearingCaseRetentionMap.values());
-            streamBuilder.add(getCaseRetentionLengthCalculatedEvent(getCaseURN(prosecutionCase.getProsecutionCaseIdentifier()),
-                    updatedCaseStatus, retentionPolicy));
-            streamBuilder.add(getHearingEventLogsDocumentCreated(prosecutionCase.getId()).build());
-        }
-
         return apply(streamBuilder.build());
     }
 
@@ -1745,7 +1756,7 @@ public class CaseAggregate implements Aggregate {
 
         final List<UUID> caseDefendantsFromCurrentHearing = prosecutionCase.getDefendants().stream()
                 .map(uk.gov.justice.core.courts.Defendant::getId)
-                .collect(Collectors.toList());
+                .toList();
 
         final Map<UUID, Boolean> otherCaseDefendantsNotRepresentedOnCurrentHearing = getOtherCaseDefendantsNotRepresentedOnCurrentHearing(caseDefendantsFromDefendantProceedingsConcluded, caseDefendantsFromCurrentHearing);
 
@@ -1844,7 +1855,7 @@ public class CaseAggregate implements Aggregate {
                 newOffences.add(offence);
             }
             return offence;
-        }).collect(toList());
+        }).toList();
 
         final DefendantCaseOffences newDefendantCaseOffences = DefendantCaseOffences.defendantCaseOffences()
                 .withOffences(allOffences)
@@ -1860,7 +1871,7 @@ public class CaseAggregate implements Aggregate {
             final AllHearingOffencesUpdatedV2.Builder allHearingOffencesUpdatedV2 = AllHearingOffencesUpdatedV2.allHearingOffencesUpdatedV2();
             allHearingOffencesUpdatedV2.withHearingIds(new ArrayList<>(hearingIds)).
                     withDefendantId(defendantId).build();
-            final List<uk.gov.justice.core.courts.Offence> updatedOffences = allOffences.stream().filter(offence -> !newOffences.contains(offence)).collect(toList());
+            final List<uk.gov.justice.core.courts.Offence> updatedOffences = allOffences.stream().filter(offence -> !newOffences.contains(offence)).toList();
             if (!updatedOffences.isEmpty()) {
                 allHearingOffencesUpdatedV2.withUpdatedOffences(updatedOffences);
             }
@@ -2513,7 +2524,7 @@ public class CaseAggregate implements Aggregate {
                 streamBuilder.add(MasterDefendantIdUpdatedIntoHearings.masterDefendantIdUpdatedIntoHearings()
                         .withDefendant(defendantsMap.get(defendantId))
                         .withMatchedDefendants(transform(matchDefendant.getMatchedDefendants()))
-                        .withHearingIds(this.hearingIds.stream().collect(toList()))
+                        .withHearingIds(this.hearingIds.stream().toList())
                         .withProsecutionCaseId(matchDefendant.getProsecutionCaseId())
                         .build());
             } else {
@@ -2633,7 +2644,7 @@ public class CaseAggregate implements Aggregate {
                                         .withCaseUrn(ctu.getCaseUrn())
                                         .withLinkGroupId(ctu.getLinkGroupId())
                                         .build())
-                                .collect(Collectors.toList())
+                                .toList()
                 )
                 .build();
 
@@ -2670,7 +2681,7 @@ public class CaseAggregate implements Aggregate {
         return apply(Stream.of(HearingDeletedForProsecutionCase.hearingDeletedForProsecutionCase()
                 .withProsecutionCaseId(prosecutionCaseId)
                 .withHearingId(hearingId)
-                .withDefendantIds(prosecutionCase.getDefendants().stream().map(uk.gov.justice.core.courts.Defendant::getId).collect(toList()))
+                .withDefendantIds(prosecutionCase.getDefendants().stream().map(uk.gov.justice.core.courts.Defendant::getId).toList())
                 .build()));
     }
 
@@ -2734,7 +2745,7 @@ public class CaseAggregate implements Aggregate {
                             .withListingNumber(ofNullable(offence.getListingNumber()).orElse(0) + 1)
                             .withOffenceId(offence.getId())
                             .build())
-                    .collect(toList());
+                    .toList();
 
             return apply(Stream.builder()
                     .add(ProsecutionCaseListingNumberIncreased.prosecutionCaseListingNumberIncreased()
@@ -2823,7 +2834,7 @@ public class CaseAggregate implements Aggregate {
                         .withMasterDefendantId(matchedDefendant.getMasterDefendantId())
                         .withCourtProceedingsInitiated(matchedDefendant.getCourtProceedingsInitiated())
                         .build())
-                .collect(toList());
+                .toList();
     }
 
     private List<MatchedDefendants> transformToExactMatchedDefendants(final List<Cases> casesList) {
@@ -2869,7 +2880,7 @@ public class CaseAggregate implements Aggregate {
                         .withRepresentationType(RepresentationType.REPRESENTATION_ORDER)
                         .build());
             } else {
-                if (!isAlreadyAssociatedToOrganisation(defendantId, organisationId) || !(defendantOrganisationAsscociatedByRepOrder.getOrDefault(defendantId, false))) {                    // Handle wrong payload case, when it is not actually associated by payload says organisation is associated.
+                if (!isAlreadyAssociatedToOrganisation(defendantId, organisationId) || FALSE.equals(defendantOrganisationAsscociatedByRepOrder.getOrDefault(defendantId, false))) {                    // Handle wrong payload case, when it is not actually associated by payload says organisation is associated.
                     streamBuilder.add(DefendantDefenceOrganisationAssociated.defendantDefenceOrganisationAssociated()
                             .withDefendantId(defendantId)
                             .withLaaContractNumber(laaContractNumber)
@@ -2885,7 +2896,7 @@ public class CaseAggregate implements Aggregate {
         } else {
             if (organisationId != null) {
                 // Associate the one which is linked with one from payload
-                if (!isAlreadyAssociatedToOrganisation(defendantId, organisationId) || !(defendantOrganisationAsscociatedByRepOrder.getOrDefault(defendantId, false))) {
+                if (!isAlreadyAssociatedToOrganisation(defendantId, organisationId) || (FALSE.equals(defendantOrganisationAsscociatedByRepOrder.getOrDefault(defendantId, false)))) {
                     streamBuilder.add(DefendantDefenceOrganisationAssociated.defendantDefenceOrganisationAssociated()
                             .withDefendantId(defendantId)
                             .withLaaContractNumber(laaContractNumber)
@@ -2911,7 +2922,7 @@ public class CaseAggregate implements Aggregate {
     private String getDefendantLevelLegalStatus(final List<uk.gov.justice.core.courts.Offence> offencesList) {
         final List<String> defendantLevelStatusList = offencesList.stream().filter(offence -> nonNull(offence.getLaaApplnReference()))
                 .map(uk.gov.justice.core.courts.Offence::getLaaApplnReference)
-                .map(LaaReference::getOffenceLevelStatus).collect(toList());
+                .map(LaaReference::getOffenceLevelStatus).toList();
         if (defendantLevelStatusList.stream().anyMatch
                 (defendantLevelStatus -> defendantLevelStatus != null && defendantLevelStatus.equals(GRANTED.getDescription()))) {
             return GRANTED.getDescription();
@@ -3023,7 +3034,7 @@ public class CaseAggregate implements Aggregate {
 
     private void updateProsecutionCaseIdentifier(final CaseCpsProsecutorUpdated caseCpsProsecutorUpdated) {
         Prosecutor prosecutor = null;
-        if (isNull(caseCpsProsecutorUpdated.getIsCpsOrgVerifyError()) || !caseCpsProsecutorUpdated.getIsCpsOrgVerifyError()) {
+        if (isNull(caseCpsProsecutorUpdated.getIsCpsOrgVerifyError()) || FALSE.equals(caseCpsProsecutorUpdated.getIsCpsOrgVerifyError())) {
             prosecutor = Prosecutor.prosecutor()
                     .withAddress(caseCpsProsecutorUpdated.getAddress())
                     .withProsecutorCode(caseCpsProsecutorUpdated.getProsecutionAuthorityCode())
@@ -3075,7 +3086,7 @@ public class CaseAggregate implements Aggregate {
     public Stream<Object> extendCustodyTimeLimit(final UUID hearingId, final UUID offenceId, final LocalDate extendedTimeLimit) {
         final List<UUID> extendHearingIds = this.hearingIds.stream()
                 .filter(id -> !id.equals(hearingId))
-                .collect(toList());
+                .toList();
 
         if (extendHearingIds.isEmpty()) {
             return empty();
@@ -3092,7 +3103,7 @@ public class CaseAggregate implements Aggregate {
     private List<uk.gov.justice.core.courts.Defendant> updateDefendantWithProceedingsConcludedStatusAndOriginalListingNumbers(final ProsecutionCase prosecutionCaseFromCommand) {
         final List<uk.gov.justice.core.courts.Defendant> updatedDefendants = prosecutionCaseFromCommand.getDefendants().stream()
                 .map(defendant -> getUpdatedDefendant(defendant))
-                .collect(Collectors.toList());
+                .toList();
 
         final Map<UUID, Integer> listingMap = this.prosecutionCase.getDefendants().stream()
                 .flatMap(defendant -> defendant.getOffences().stream())
@@ -3104,8 +3115,8 @@ public class CaseAggregate implements Aggregate {
                 .withOffences(defendant.getOffences().stream().map(offence -> uk.gov.justice.core.courts.Offence.offence()
                         .withValuesFrom(offence)
                         .withListingNumber(listingMap.get(offence.getId()))
-                        .build()).collect(toList()))
-                .build()).collect(toList());
+                        .build()).toList())
+                .build()).toList();
     }
 
     private uk.gov.justice.core.courts.Defendant getUpdatedDefendant(final uk.gov.justice.core.courts.Defendant defendant) {
@@ -3243,7 +3254,7 @@ public class CaseAggregate implements Aggregate {
     private List<PetDefendants> buildPetDefendants(final List<UUID> defendantIds) {
         return defendantIds.stream().map(entry -> PetDefendants.petDefendants()
                 .withDefendantId(entry)
-                .build()).collect(toList());
+                .build()).toList();
     }
 
     public Stream<Object> updatePetForm(final UUID caseId, final String petFormData,
@@ -3371,7 +3382,7 @@ public class CaseAggregate implements Aggregate {
                 .map(this::buildDefendantForPet)
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(toList());
+                .toList();
     }
 
     public Stream<Object> recordOnlinePlea(final PleadOnline pleadOnline) {
@@ -3600,7 +3611,7 @@ public class CaseAggregate implements Aggregate {
                         .withMaterialId(UUID.randomUUID())
                         .withHearingDateTime(hearingDateTime)
                         .build())
-                .collect(toList());
+                .toList();
 
         return apply(formFinalisedList.stream().map(formFinalised -> formFinalised));
     }
@@ -3663,7 +3674,7 @@ public class CaseAggregate implements Aggregate {
     private List<FormDefendants> buildDefendants(final List<UUID> defendantIds) {
         return defendantIds.stream().map(entry -> formDefendants()
                 .withDefendantId(entry)
-                .build()).collect(toList());
+                .build()).toList();
     }
 
     private void updateFormOnFormUpdate(final FormUpdated formUpdated) {
@@ -3709,7 +3720,7 @@ public class CaseAggregate implements Aggregate {
         final Form form = formMap.get(editFormRequested.getCourtFormId());
         final FormLockStatus lockStatus = form.getFormLockStatus();
 
-        if (nonNull(editFormRequested.getLockStatus().getIsLockAcquirable()) && editFormRequested.getLockStatus().getIsLockAcquirable()) {
+        if (nonNull(editFormRequested.getLockStatus().getIsLockAcquirable()) && TRUE.equals(editFormRequested.getLockStatus().getIsLockAcquirable())) {
             lockStatus.setLockedBy(editFormRequested.getLockStatus().getLockRequestedBy());
             lockStatus.setLockExpiryTime(editFormRequested.getLockStatus().getExpiryTime());
             form.setFormLockStatus(lockStatus);
@@ -3777,11 +3788,15 @@ public class CaseAggregate implements Aggregate {
         final ProsecutionCase caseForHearing = ProsecutionCase.prosecutionCase().withValuesFrom(this.getProsecutionCase())
                 .withDefendants(this.getProsecutionCase().getDefendants().stream()
                         .filter(def -> defendantsIds.contains(def.getId()))
-                        .map(def -> uk.gov.justice.core.courts.Defendant.defendant().withValuesFrom(def)
-                                .withOffences(ofNullable(this.defendantCaseOffences.get(def.getId())).map(Collection::stream).orElseGet(Stream::empty)
-                                        .filter(off -> offenceIds.contains(off.getId())).toList())
-
-                                .build())
+                        .map(def -> {
+                            final uk.gov.justice.core.courts.Defendant latestDefendant = this.defendantsMap.getOrDefault(def.getId(), def);
+                            final uk.gov.justice.core.courts.Defendant.Builder builder = uk.gov.justice.core.courts.Defendant.defendant()
+                                    .withValuesFrom(latestDefendant);
+                            applyDefendantFallbacks(def, latestDefendant, builder);
+                            return builder.withOffences(ofNullable(this.defendantCaseOffences.get(def.getId())).map(Collection::stream).orElseGet(Stream::empty)
+                                            .filter(off -> offenceIds.contains(off.getId())).toList())
+                                    .build();
+                        })
                         .collect(Collectors.toList()))
                 .build();
 
